<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
    Tesla - A ROS-based framework for performing magnetic manipulation

    Copyright 2018 Multi Scale Robotics Lab

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<package>
  <name>navion_example</name>
  <version>3.1.0</version>
  <description>The navion example package</description>

  <maintainer email="dreyfusr@ethz.ch">Roland Dreyfus</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>video_stream_opencv</run_depend>
  <run_depend>nav_launch</run_depend>
  
</package>
